--- a/GameEngineTest1/My Project/Resources.resx
+++ b/GameEngineTest1/My Project/Resources.resx
@@ -139,36 +139,6 @@
   <data name="Jumping7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jumping7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="r0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r0.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r2.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r3.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r4.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r5.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r6.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r7.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r8" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r8.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="r9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\r9.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Running1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Running1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -202,9 +172,6 @@
   <data name="Running9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Running9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SR_IMages" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SR IMages.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="Standing1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Standing1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -213,9 +180,6 @@
   </data>
   <data name="Standing3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Standing3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TextFileTest1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TextFileTest1.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="WarpIn1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WarpIn1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -237,5 +201,8 @@
   </data>
   <data name="WarpIn7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WarpIn7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MapFileDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MapFileDocumentation.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
