--- a/GameEngineTest1/My Project/Resources.resx
+++ b/GameEngineTest1/My Project/Resources.resx
@@ -133,12 +133,6 @@
   <data name="Jumping5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jumping5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Jumping6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Jumping6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Jumping7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Jumping7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Running1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Running1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -204,5 +198,11 @@
   </data>
   <data name="MapFileDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MapFileDocumentation.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="Landing1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Landing1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Landing2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Landing2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
