--- a/GameEngineTest1/My Project/Resources.resx
+++ b/GameEngineTest1/My Project/Resources.resx
@@ -205,4 +205,10 @@
   <data name="Landing2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Landing2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="megamanx" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\megamanx.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="megamanx___Copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\megamanx - Copy.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
