--- a/GameEngineTest1/My Project/Resources.resx
+++ b/GameEngineTest1/My Project/Resources.resx
@@ -415,4 +415,37 @@
   <data name="VictoryPose5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VictoryPose5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bkMaze" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bkMaze.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeBlock1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeBlock1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeBlock2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeBlock2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeCeilingBlockLayerA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeCeilingBlockLayerA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeCeilingBlockLayerB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeCeilingBlockLayerB.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeFloorBlockLayerA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeFloorBlockLayerA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeFloorBlockLayerB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeFloorBlockLayerB.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeFloorBlockSlopeRightA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeFloorBlockSlopeRightA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeFloorBlockSlopeRightB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeFloorBlockSlopeRightB.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MazeFloorSlopeRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MazeFloorSlopeRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PrtMaze" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PrtMaze.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
