--- a/GameEngineTest1/My Project/Resources.resx
+++ b/GameEngineTest1/My Project/Resources.resx
@@ -448,7 +448,7 @@
   <data name="PrtMaze" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PrtMaze.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Level1MapData" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Level1MapData.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="DebugRoomMapData" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DebugRoomMapData.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
