--- a/GameEngineTest1/My Project/Resources.resx
+++ b/GameEngineTest1/My Project/Resources.resx
@@ -451,4 +451,7 @@
   <data name="DebugRoomMapData" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DebugRoomMapData.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="DebugRoom2MapData" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DebugRoom2MapData.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
